[FEAT] User stock register API #26
- Add user stock register API
- Update Swagger docs
